# mapoints

./: .dockerignore  .env.example  .gitignore  Dockerfile  MAPOINTS.postman_collection.json  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/dependencies/: auth.py  database.py
app/api/routes/: api.py  maps.py  points.py  users.py
app/core/: config.py  events.py
app/db/: errors.py  events.py
app/db/errors/: common.py  points.py  users.py
app/db/queries/: init.sql  points.py  users.py
app/db/queries/sql/: 0001_sequences.sql  0002_tables.sql
app/db/repositories/: base.py  points.py  users.py
app/models/schemas/: maps.py  points.py  users.py
app/resources/: strings.py
app/services/: auth.py  jwt.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: package-lock.json  package.json  server.js
frontend/src/api/: instance.js
frontend/src/assets/styles/: main.css
scripts/: entrypoint.sh
