[tool.poetry]
name = "abrash_ipp_pr4"
version = "0.1.0"
description = ""
authors = ["Abrash E.N"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["uvicorn"], version = "^0.70.0"}
uvicorn = "^0.15.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
loguru = "^0.5.3"
asyncpg = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
